--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
-        <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+    <header class="border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800 sticky top-0 z-50 backdrop-filter backdrop-blur-md">
+        <!--  -->
+        <nav class="">
+            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl z-50">
                 <a href="/" class="flex items-center">
                     <img src="images/180x180.png" class="mr-3 h-6 sm:h-9" alt="KICKTALK Logo" />
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">KICKTALK</span>
                 </a>
                 <div class="hidden lg:flex items-center lg:order-2">
-                    <a href="#" class="text-blue-900 dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">안드로이드 준비중</a>
+                    <a href="#" class=" dark:text-white hover:bg-gray-50 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">안드로이드 준비중</a>
                     <a href="#" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 dark:bg-gray-600 dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">AppStore에서 열기</a>
                     <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                         <span class="sr-only">Open main menu</span>
@@ -32,14 +32,15 @@
         </nav>
     </header>
 
-    <section class="bg-white dark:bg-gray-900 text-neutral-900">
-        <div class="grid py-8 px-4 mx-auto max-w-screen-xl lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
+    <section class="bg-white dark:bg-gray-900 text-white relative">
+        <!-- background video -->
+        <div class="grid py-24 px-4 mx-auto max-w-screen-xl lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 z-30 relative">
             <div class="place-self-center mr-auto lg:col-span-7">
-                <h1 class="max-w-2xl text-4xl tracking-tight font-bold leading-none md:text-5xl xl:text-6xl dark:text-white">가장 활발한</h1>
-                <h1 class="mb-4 max-w-2xl text-4xl tracking-tight font-bold leading-none md:text-5xl xl:text-6xl dark:text-white">EPL 팀 응원 커뮤니티</h1>
-                <p class="max-w-2xl font-light text-gray-500 md:text-lg lg:text-xl dark:text-gray-400">킥톡을 지금 당장 만나보세요.</p>
-                <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">응원부터 경기일정과 굿즈구매까지 한 곳에서.</p>
-                <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-blue-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
+                <h1 class="max-w-2xl text-4xl tracking-tight font-bold leading-none md:text-5xl xl:text-6xl dark:text-white drop-shadow-2xl">가장 활발한</h1>
+                <h1 class="mb-4 max-w-2xl text-4xl tracking-tight font-bold leading-none md:text-5xl xl:text-6xl dark:text-white drop-shadow-2xl">EPL 팀 응원 커뮤니티</h1>
+                <p class="max-w-2xl font-light text-white md:text-lg lg:text-xl dark:text-gray-400">킥톡을 지금 당장 만나보세요.</p>
+                <p class="mb-6 max-w-2xl font-light text-white lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">응원부터 경기일정과 굿즈구매까지 한 곳에서.</p>
+                <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
                     플레이콘솔(준비중)
                 </a> 
                 <a href="#" class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white rounded-lg bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-900">
@@ -47,10 +48,13 @@
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                 </a>
             </div>
-            <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-                <img src="images/mockup.png" class="object-cover" alt="mockup">
-            </div>                
+            <div class="hidden lg:mt-0 lg:col-span-5 lg:flex translate-y-16">
+              <img src="images/mockup.png" class="object-cover z-10" alt="mockup">
+            </div>        
         </div>
+        <video autoplay muted loop id="v" class="absolute inset-0 object-cover w-full h-full z-0">
+            <source src="https://assets.mixkit.co/videos/preview/mixkit-friends-from-different-countries-celebrating-a-goal-44602-large.mp4" type="video/mp4">
+        </video>
     </section>
     <section class="bg-gray-50 dark:bg-gray-800">
         <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
