--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="icon" type="image/png" sizes="180x180" href="images/180x180.png">
     <meta name="description" content="이젠 나만의 EPL 팀을 킥톡에서 만나보세요">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+        body { 
+            font-family: 'Pretendard-Regular';
+        }
+    </style>
 </head>
 <body>
     <header class="border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800 sticky top-0 z-50 backdrop-filter backdrop-blur-md">
@@ -53,7 +64,7 @@
             </div>        
         </div>
         <video autoplay muted loop id="v" class="absolute inset-0 object-cover w-full h-full z-0">
-            <source src="https://assets.mixkit.co/videos/preview/mixkit-friends-from-different-countries-celebrating-a-goal-44602-large.mp4" type="video/mp4">
+            <source src="images/1031901296.mp4" type="video/mp4">
         </video>
     </section>
     <section class="bg-gray-50 dark:bg-gray-800">
