--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img src="images/mockup.png" class="object-cover z-10" alt="mockup">
             </div>        
         </div>
-        <video autoplay muted loop id="v" class="absolute inset-0 object-cover w-full h-full z-0">
+        <video autoplay muted loop playsinline id="v" class="absolute inset-0 object-cover w-full h-full z-0">
             <source src="images/1031901296.mp4" type="video/mp4">
         </video>
     </section>
